# jeopardy

./: .cursorrules  .gitignore  CONTEXT.md  GEMINI.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  question.html  script.js  style.css
.github/prompts/: plan-bibleChallenge.prompt.md
backend/: Cargo.toml
backend/src/: main.rs  models.rs  routes.rs  utils.rs
backend/src/handlers/: mod.rs  session.rs  team.rs  ws.rs
backend/src/services/: game_actions.rs  mod.rs  ws_broadcast.rs
data/: big-doc.tsv
frontend/: PLAN.md  package-lock.json  package.json
frontend/examples/: 3_categories_3x3.tsv  5_categories_custom.tsv  8_categories_uneven.tsv  8_no_category.tsv  gospel_harmony_tsv.txt  gospel_harmony_tsv_2.txt  gospel_qa_1.tsv  gospel_qa_10.tsv  gospel_qa_2.tsv  gospel_qa_3.tsv  gospel_qa_4.tsv  gospel_qa_5.tsv  gospel_qa_6.tsv  gospel_qa_7.tsv  gospel_qa_8.tsv  gospel_qa_9.tsv  leviticus_qa_1.tsv  leviticus_qa_10.tsv  leviticus_qa_2.tsv  leviticus_qa_3.tsv  leviticus_qa_4.tsv  leviticus_qa_5.tsv  leviticus_qa_6.tsv  leviticus_qa_7.tsv  leviticus_qa_8.tsv  leviticus_qa_9.tsv  leviticus_tsv.txt  no_category.tsv  no_point_values.tsv  single_category.tsv
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Board.tsx  BuzzFeedback.css  BuzzFeedback.tsx  Menu.tsx  (+6 more)
src/: App.tsx  main.tsx
src/components/: Board.tsx  Question.tsx
src/context/: BoardContext.tsx  QuestionsContext.tsx
src/data/: qa.tsv  sample_questions.json
src/pages/: Home.tsx  QuestionPage.tsx
src/styles/: App.css  Board.css  Home.css  Question.css
(+31 files in other folders)
